--- a/CuckooChessAPK/res/values/strings.xml
+++ b/CuckooChessAPK/res/values/strings.xml
@@ -2,13 +2,17 @@
 <resources>
     <string name="hello">Hello World, CuckooChess!</string>
     <string name="app_name">CuckooChess</string>
-<string-array name="thinking_times_texts"><item>1s</item>
+<string-array name="thinking_times_texts">
+<item>Easy</item>
+<item>1s</item>
 <item>5s</item>
 <item>10s</item>
 <item>30s</item>
 <item>60s</item>
 </string-array>
-<string-array name="thinking_times_values"><item>1000</item>
+<string-array name="thinking_times_values">
+<item>-1</item>
+<item>1000</item>
 <item>5000</item>
 <item>10000</item>
 <item>30000</item>
