--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -7,6 +7,7 @@
     <item>10s</item>
     <item>30s</item>
     <item>60s</item>
+    <item>3min</item>
   </string-array>
   <string-array name="thinking_times_values">
     <item>1000</item>
@@ -14,6 +15,7 @@
     <item>10000</item>
     <item>30000</item>
     <item>60000</item>
+    <item>180000</item>
   </string-array>
   <string-array name="font_size_texts">
     <item>Small</item>
