--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -27,4 +27,16 @@
     <item>12</item>
     <item>16</item>
   </string-array>
+  <string-array name="game_mode_texts">
+    <item>Play White</item>
+    <item>Play Black</item>
+    <item>Two Players</item>
+    <item>Analysis</item>
+  </string-array>
+  <string-array name="game_mode_values">
+    <item>1</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+  </string-array>
 </resources>
