DroidFish: Implemented computer vs computer mode.

--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -32,11 +32,13 @@
     <item>Play Black</item>
     <item>Two Players</item>
     <item>Analysis</item>
+    <item>Computer vs Computer</item>
   </string-array>
   <string-array name="game_mode_values">
     <item>1</item>
     <item>2</item>
     <item>3</item>
     <item>4</item>
+    <item>5</item>
   </string-array>
 </resources>
