--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -41,4 +41,20 @@
     <item>4</item>
     <item>5</item>
   </string-array>
+  <string name="about_info">
+DroidFish is an Android port of the famous stockfish chess engine. \
+Stockfish is one of the strongest chess engines in the world. \
+The Android version can often search 15 ply or deeper on a 1GHz Snapdragon CPU.\n\
+\n\
+Features:\n\
+* Opening book\n\
+* Copy/paste to/from clipboard\n\
+* Analysis mode\n\
+* Two player mode\n\
+* Computer vs computer mode\n\
+\n\
+Hint: Long press chess board to activate copy/paste menu.\n\
+\n\
+License: GPLv3\
+  </string>
 </resources>
