--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -41,19 +41,21 @@
     <item>4</item>
     <item>5</item>
   </string-array>
-  <string name="about_info">
-DroidFish is an Android port of the famous stockfish chess engine. \
+  <string name="about_info">\
+<b>About</b>\n\
+DroidFish is an Android port of the famous <i>stockfish</i> chess engine. \
 Stockfish is one of the strongest chess engines in the world. \
 The Android version can often search 15 ply or deeper on a 1GHz Snapdragon CPU.\n\
 \n\
-Features:\n\
+<b>Features</b>\n\
 * Opening book\n\
 * Copy/paste to/from clipboard\n\
 * Analysis mode\n\
 * Two player mode\n\
 * Computer vs computer mode\n\
 \n\
-Hint: Long press chess board to activate copy/paste menu.\n\
+<b>Hints</b>\n\
+* Long press chess board to activate copy/paste menu.\n\
 \n\
 License: GPLv3\
   </string>
