--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -57,6 +57,7 @@ The Android version can often search 15 ply or deeper on a 1GHz Snapdragon CPU.\
 <b>Hints</b>\n\
 * Long press chess board to activate copy/paste menu.\n\
 \n\
-License: GPLv3\
+<b>License</b>\n\
+GNU GPL v3\
   </string>
 </resources>
