--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -43,8 +43,8 @@
   </string-array>
   <string name="about_info">\
 <b>About</b>\n\
-DroidFish is an Android port of the famous <i>stockfish</i> chess engine. \
-Stockfish is one of the strongest chess engines in the world. \
+<i>DroidFish</i> is an Android port of the famous <i>stockfish</i> chess engine. \
+<i>Stockfish</i> is one of the strongest chess engines in the world. \
 The Android version can often search 15 ply or deeper on a 1GHz Snapdragon CPU.\n\
 \n\
 <b>Features</b>\n\
