DroidFish: Move string constants to strings.xml.

--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -1,47 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">DroidFish</string>
-  <string-array name="thinking_times_texts">
-    <item>1s</item>
-    <item>5s</item>
-    <item>10s</item>
-    <item>30s</item>
-    <item>60s</item>
-    <item>3min</item>
-  </string-array>
-  <string-array name="thinking_times_values">
-    <item>1000</item>
-    <item>5000</item>
-    <item>10000</item>
-    <item>30000</item>
-    <item>60000</item>
-    <item>180000</item>
-  </string-array>
-  <string-array name="font_size_texts">
-    <item>Small</item>
-    <item>Medium</item>
-    <item>Large</item>
-  </string-array>
-  <string-array name="font_size_values">
-    <item>10</item>
-    <item>12</item>
-    <item>16</item>
-  </string-array>
-  <string-array name="game_mode_texts">
-    <item>Play White</item>
-    <item>Play Black</item>
-    <item>Two Players</item>
-    <item>Analysis</item>
-    <item>Computer vs Computer</item>
-  </string-array>
-  <string-array name="game_mode_values">
-    <item>1</item>
-    <item>2</item>
-    <item>3</item>
-    <item>4</item>
-    <item>5</item>
-  </string-array>
-  <string name="about_info">\
+	<string name="app_name">DroidFish</string>
+	<string-array name="thinking_times_texts">
+	    <item>1s</item>
+	    <item>5s</item>
+    	<item>10s</item>
+	    <item>30s</item>
+    	<item>60s</item>
+	    <item>3min</item>
+	</string-array>
+	<string-array name="thinking_times_values">
+    	<item>1000</item>
+	    <item>5000</item>
+    	<item>10000</item>
+	    <item>30000</item>
+    	<item>60000</item>
+	    <item>180000</item>
+	</string-array>
+	<string-array name="font_size_texts">
+    	<item>Small</item>
+	    <item>Medium</item>
+    	<item>Large</item>
+	</string-array>
+	<string-array name="font_size_values">
+	    <item>10</item>
+    	<item>12</item>
+	    <item>16</item>
+	</string-array>
+	<string-array name="game_mode_texts">
+	    <item>Play White</item>
+    	<item>Play Black</item>
+	    <item>Two Players</item>
+    	<item>Analysis</item>
+	    <item>Computer vs Computer</item>
+	</string-array>
+	<string-array name="game_mode_values">
+	    <item>1</item>
+    	<item>2</item>
+	    <item>3</item>
+    	<item>4</item>
+	    <item>5</item>
+	</string-array>
+	<string name="about_info">\
 <b>About</b>\n\
 <i>DroidFish</i> is an Android port of the famous <i>stockfish</i> chess engine. \
 <i>Stockfish</i> is one of the strongest chess engines in the world. \
@@ -66,5 +66,35 @@ GNU GPL v3\n\
 <b>Developers</b>\n\
 * <i>Stockfish</i> is developed by Tord Romstad, Marco Costalba and Joona Kiiski.\n\
 * <i>Droidfish</i> is developed by Peter Österlund.\n\
-  </string>
+	</string>
+	<string name="draw_claim_not_valid">Draw claim not valid</string>
+	<string name="queen">Queen</string>
+	<string name="rook">Rook</string>
+	<string name="bishop">Bishop</string>
+	<string name="knight">Knight</string>
+	<string name="promote_pawn_to">Promote pawn to?</string>
+	<string name="copy_game">Copy Game</string>
+	<string name="copy_position">Copy Position</string>
+	<string name="paste">Paste</string>
+	<string name="clipboard">Clipboard</string>
+	<string name="goto_move">Goto move</string>
+	<string name="invalid_number_format">Invalid number format</string>
+	<string name="side_to_move">Side to Move</string>
+	<string name="clear_board">Clear Board</string>
+	<string name="initial_position">Initial Position</string>
+	<string name="castling_flags">Castling Flags</string>
+	<string name="en_passant_file">En Passant File</string>
+	<string name="move_counters">Move Counters</string>
+	<string name="paste_position">Paste Position</string>
+	<string name="edit_board">Edit Board</string>
+	<string name="select_side_to_move_first">Select side to move first</string>
+	<string name="white">White</string>
+	<string name="black">Black</string>
+	<string name="white_king_castle">White king castle</string>
+	<string name="white_queen_castle">White queen castle</string>
+	<string name="black_king_castle">Black king castle</string>
+	<string name="black_queen_castle">Black queen castle</string>
+	<string name="none">None</string>
+	<string name="select_en_passant_file">Select En Passant File</string>
+	<string name="edit_move_counters">Edit Move Counters</string>
 </resources>
