--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -60,6 +60,14 @@ The Android version can often search 15 ply or deeper on a 1GHz Snapdragon CPU.\
 * In game mode, long press chess board to activate copy/paste menu.\n\
 * In edit board mode, long press chess board to activate edit menu.\n\
 \n\
+<b>Opening book</b>\n\
+The program contains a small internal opening book. If you want to use \
+a larger book, you can configure the program to use a <i>polyglot</i> book file:\n\
+1. Create a directory called <i>DroidFish</i> on the SD card.\n\
+2. Copy one or more polyglot book files to the <i>DroidFish</i> directory.\n\
+3. From the program menu, activate the <i>Select opening book</i> function.\n\
+4. Select the opening book file you want to use.\n\
+\n\
 <b>License</b>\n\
 GNU GPL v3\n\
 \n\
@@ -97,4 +105,6 @@ GNU GPL v3\n\
 	<string name="none">None</string>
 	<string name="select_en_passant_file">Select En Passant File</string>
 	<string name="edit_move_counters">Edit Move Counters</string>
+	<string name="no_book">&lt;No Book&gt;</string>
+	<string name="select_opening_book_file">Select opening book file</string>
 </resources>
