DroidFish: Nicer interface when selecting book files.

--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -105,6 +105,6 @@ GNU GPL v3\n\
 	<string name="none">None</string>
 	<string name="select_en_passant_file">Select En Passant File</string>
 	<string name="edit_move_counters">Edit Move Counters</string>
-	<string name="no_book">&lt;No Book&gt;</string>
+	<string name="internal_book">&lt;Internal Book&gt;</string>
 	<string name="select_opening_book_file">Select opening book file</string>
 </resources>
