DroidFish: Made it possible to set the new time control values from the preferences screen.

--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -1,21 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">DroidFish</string>
-	<string-array name="thinking_times_texts">
-	    <item>1s</item>
-	    <item>5s</item>
-    	<item>10s</item>
-	    <item>30s</item>
-    	<item>60s</item>
-	    <item>3min</item>
+	<string-array name="moves_per_session_texts">
+	    <item>Whole Game</item>
+	    <item>10 moves</item>
+	    <item>20 moves</item>
+    	<item>30 moves</item>
+	    <item>40 moves</item>
+	    <item>50 moves</item>
+    	<item>60 moves</item>
 	</string-array>
-	<string-array name="thinking_times_values">
-    	<item>1000</item>
-	    <item>5000</item>
-    	<item>10000</item>
+	<string-array name="moves_per_session_values">
+	    <item>0</item>
+	    <item>10</item>
+	    <item>20</item>
+    	<item>30</item>
+	    <item>40</item>
+	    <item>50</item>
+    	<item>60</item>
+	</string-array>
+	<string-array name="time_control_texts">
+	    <item>15 seconds</item>
+	    <item>30 seconds</item>
+    	<item>1 minute</item>
+	    <item>2 minutes</item>
+    	<item>3 minutes</item>
+    	<item>5 minutes</item>
+    	<item>10 minutes</item>
+    	<item>15 minutes</item>
+    	<item>30 minutes</item>
+    	<item>45 minutes</item>
+    	<item>60 minutes</item>
+    	<item>90 minutes</item>
+    	<item>120 minutes</item>
+	</string-array>
+	<string-array name="time_control_values">
+	    <item>15000</item>
 	    <item>30000</item>
     	<item>60000</item>
-	    <item>180000</item>
+	    <item>120000</item>
+    	<item>180000</item>
+    	<item>300000</item>
+    	<item>600000</item>
+    	<item>900000</item>
+    	<item>1800000</item>
+    	<item>2700000</item>
+    	<item>3600000</item>
+    	<item>5400000</item>
+    	<item>7200000</item>
+	</string-array>
+	<string-array name="time_increment_texts">
+	    <item>0s</item>
+	    <item>1s</item>
+	    <item>2s</item>
+	    <item>3s</item>
+	    <item>4s</item>
+	    <item>5s</item>
+	    <item>10s</item>
+    	<item>12s</item>
+    	<item>15s</item>
+    	<item>30s</item>
+	    <item>60s</item>
+	</string-array>
+	<string-array name="time_increment_values">
+	    <item>0</item>
+	    <item>1000</item>
+	    <item>2000</item>
+	    <item>3000</item>
+	    <item>4000</item>
+	    <item>5000</item>
+	    <item>10000</item>
+    	<item>12000</item>
+    	<item>15000</item>
+    	<item>30000</item>
+	    <item>60000</item>
 	</string-array>
 	<string-array name="font_size_texts">
     	<item>Small</item>
