--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -102,13 +102,13 @@
 	    <item>5</item>
 	</string-array>
 	<string-array name="thinking_arrows_texts">
-	    <item>0</item>
-	    <item>1</item>
-	    <item>2</item>
-	    <item>3</item>
-	    <item>4</item>
-	    <item>5</item>
-	    <item>6</item>
+	    <item>No arrows</item>
+	    <item>Max 1 Arrow</item>
+	    <item>Max 2 Arrows</item>
+	    <item>Max 3 Arrows</item>
+	    <item>Max 4 Arrows</item>
+	    <item>Max 5 Arrows</item>
+	    <item>Max 6 Arrows</item>
 	</string-array>
 	<string-array name="thinking_arrows_values">
 	    <item>0</item>
