--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -139,8 +139,8 @@ The Android version can often search 15 ply or deeper on a 1GHz Snapdragon CPU.\
 * In edit board mode, long press chess board to activate edit menu.\n\
 \n\
 <b>Opening book</b>\n\
-The program contains a small internal opening book. If you want to use \
-a larger book, you can configure the program to use a <i>polyglot</i> book file:\n\
+DroidFish contains a small internal opening book. If you want to use \
+a larger book, you can configure DroidFish to use a <i>polyglot</i> book file:\n\
 1. Create a directory called <i>DroidFish</i> on the SD card.\n\
 2. Copy one or more polyglot book files to the <i>DroidFish</i> directory.\n\
 3. From the program menu, activate the <i>Select opening book</i> function.\n\
