--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -192,6 +192,7 @@ you are not actively using the program.\
 	<string name="copy_game">Copy Game to Clipboard</string>
 	<string name="copy_position">Copy Position to Clipboard</string>
 	<string name="paste">Paste from Clipboard</string>
+	<string name="load_game">Load from PGN file</string>
 	<string name="remove_variation">Remove variation</string>
 	<string name="tools_menu">Tools</string>
 	<string name="goto_move">Goto move</string>
@@ -216,4 +217,5 @@ you are not actively using the program.\
 	<string name="edit_move_counters">Edit Move Counters</string>
 	<string name="internal_book">&lt;Internal Book&gt;</string>
 	<string name="select_opening_book_file">Select opening book file</string>
+	<string name="select_pgn_file">Select PGN file to open</string>
 </resources>
