--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -228,4 +228,5 @@ you are not actively using the program.\
 	<string name="select_pgn_game">Select game to open</string>
 	<string name="reading_pgn_file">Reading PGN file</string>
 	<string name="please_wait">Please wait...</string>
+	<string name="no_pgn_files">No files found in directory DroidFish/pgn on the SD card</string>
 </resources>
