--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -229,4 +229,5 @@ you are not actively using the program.\
 	<string name="reading_pgn_file">Reading PGN file</string>
 	<string name="please_wait">Please wait...</string>
 	<string name="no_pgn_files">No files found in directory DroidFish/pgn on the SD card</string>
+	<string name="select_color_theme">Select Color Theme</string>
 </resources>
