--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -200,6 +200,7 @@ you are not actively using the program.\
 	<string name="copy_position">Copy Position to Clipboard</string>
 	<string name="paste">Paste from Clipboard</string>
 	<string name="load_game">Load game from PGN file</string>
+	<string name="save_game">Save game to PGN file</string>
 	<string name="remove_variation">Remove variation</string>
 	<string name="tools_menu">Tools</string>
 	<string name="goto_move">Goto move</string>
@@ -225,6 +226,7 @@ you are not actively using the program.\
 	<string name="internal_book">&lt;Internal Book&gt;</string>
 	<string name="select_opening_book_file">Select opening book file</string>
 	<string name="select_pgn_file">Select PGN file to open</string>
+	<string name="select_pgn_file_save">Save to PGN file</string>
 	<string name="select_pgn_game">Select game to open</string>
 	<string name="reading_pgn_file">Reading PGN file</string>
 	<string name="please_wait">Please wait...</string>
