--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -239,4 +239,5 @@ you are not actively using the program.\
 	<string name="play_black">Play Black</string>
 	<string name="edit_game">Edit Game</string>
 	<string name="edit_headers">Edit Headers</string>
+	<string name="edit_comments">Edit Comments</string>
 </resources>
