--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -201,7 +201,7 @@ you are not actively using the program.\
 	<string name="paste">Paste from Clipboard</string>
 	<string name="load_game">Load game from PGN file</string>
 	<string name="save_game">Save game to PGN file</string>
-	<string name="truncate_gametree">Truncate game tree</string>
+	<string name="truncate_gametree">Truncate Game Tree</string>
 	<string name="tools_menu">Tools</string>
 	<string name="goto_move">Goto move</string>
 	<string name="invalid_number_format">Invalid number format</string>
