--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -197,6 +197,8 @@ you are not actively using the program.\
 	<string name="load_game">Load game from PGN file</string>
 	<string name="save_game">Save game to PGN file</string>
 	<string name="truncate_gametree">Truncate Game Tree</string>
+	<string name="move_var_up">Move Variation Up</string>
+	<string name="move_var_down">Move Variation Down</string>
 	<string name="tools_menu">Tools</string>
 	<string name="goto_move">Goto move</string>
 	<string name="invalid_number_format">Invalid number format</string>
