--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -143,6 +143,7 @@ The Android version can often search 15 ply or deeper on a 1GHz Snapdragon CPU.\
 * Scroll left/right on the chess board to undo/redo moves.\n\
 * If the game contains multiple variations, scroll up/down on the chess board to \
 go to the previous/next variation.\n\
+* Long press left/right buttons for additional game navigation commands.\n\
 \n\
 <b>Opening book</b>\n\
 DroidFish contains a small internal opening book. If you want to use \
