DroidFish: Added support for opening scid databases using the "Scid on the go" app. Patch from Gerhard Kalab, somewhat modified by me.

--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -196,6 +196,7 @@ you are not actively using the program.\
 	<string name="copy_position">Copy Position to Clipboard</string>
 	<string name="paste">Paste from Clipboard</string>
 	<string name="load_game">Load game from PGN file</string>
+	<string name="load_scid_game">Load game from Scid file</string>
 	<string name="save_game">Save game to PGN file</string>
 	<string name="truncate_gametree">Truncate Game Tree</string>
 	<string name="move_var_up">Move Variation Up</string>
@@ -225,11 +226,14 @@ you are not actively using the program.\
 	<string name="select_opening_book_file">Select opening book file</string>
 	<string name="select_pgn_file">Select PGN file to open</string>
 	<string name="select_pgn_file_save">Save to PGN file</string>
+    <string name="select_scid_file">Select Scid file to open</string>
 	<string name="select_pgn_game">Select game to open</string>
 	<string name="reading_pgn_file">Reading PGN file</string>
+	<string name="reading_scid_file">Reading Scid file</string>
 	<string name="new_file">&lt;New File&gt;</string>
 	<string name="please_wait">Please wait...</string>
 	<string name="no_pgn_files">No files found in directory DroidFish/pgn on the SD card</string>
+	<string name="no_scid_files">No files found in directory scid on the SD card</string>
 	<string name="select_color_theme">Select Color Theme</string>
 	<string name="edit_replay_game">Edit/re-play Game</string>
 	<string name="analysis_mode">Analysis Mode</string>
