DroidFish: Changed version to 1.30.

--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -144,6 +144,7 @@ The Android version can often search 15 ply or deeper on a 1GHz Snapdragon CPU.\
 * Computer vs computer mode\n\
 * Setup positions\n\
 * Extensive PGN support\n\
+* Adjustable playing strength\n\
 \n\
 <b>Hints</b>\n\
 * In game mode, long press chess board to activate copy/paste menu.\n\
