DroidFish: Added option to use even larger font size. Useful for tablets.

--- a/DroidFish/res/values/strings.xml
+++ b/DroidFish/res/values/strings.xml
@@ -89,11 +89,13 @@
     	<item>Small</item>
 	    <item>Medium</item>
     	<item>Large</item>
+        <item>Larger</item>
 	</string-array>
 	<string-array name="font_size_values">
 	    <item>10</item>
     	<item>12</item>
 	    <item>16</item>
+        <item>21</item>
 	</string-array>
 	<string-array name="thinking_arrows_texts">
 	    <item>No arrows</item>
